--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "22.0.2",
-    "@rollup/plugin-node-resolve": "13.3.0",
-    "postcss": "8.4.16",
+    "@rollup/plugin-commonjs": "23.0.0",
+    "@rollup/plugin-node-resolve": "15.0.0",
+    "@vitejs/plugin-vue2": "1.1.2",
+    "postcss": "8.4.18",
     "rimraf": "3.0.2",
-    "rollup": "2.78.1",
+    "rollup": "3.1.0",
     "rollup-plugin-vue": "5.1.9",
-    "unocss": "0.45.12",
-    "vite": "3.0.9",
-    "vite-plugin-vue2": "2.0.2",
-    "vue-template-compiler": "2.6.14"
+    "unocss": "0.45.29",
+    "vite": "3.1.8",
+    "vue-template-compiler": "2.7.13"
   },
   "dependencies": {
-    "vue": "2.6.14"
+    "vue": "2.7.13"
   }
 }
