--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "23.0.0",
     "@rollup/plugin-node-resolve": "15.0.0",
-    "@vitejs/plugin-vue2": "1.1.2",
     "postcss": "8.4.18",
     "rimraf": "3.0.2",
-    "rollup": "3.1.0",
+    "rollup": "3.2.1",
     "rollup-plugin-vue": "5.1.9",
     "unocss": "0.45.29",
     "vite": "3.1.8",
+    "vite-plugin-vue2": "2.0.2",
     "vue-template-compiler": "2.7.13"
   },
   "dependencies": {
